envs/dev/web/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: bitcert-attest
  labels:
    app.kubernetes.io/name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
    spec:
      containers:
      - name: web
        image: ghcr.io/jbyee-test-org/bitcert/web@sha256:63bbe376b32e737745853b61b30da7296d6301918bb723ef44237e2a8f507409
        ports:
        - containerPort: 8080
