envs/dev/web/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: bitcert-attest
spec:
  selector:
    app.kubernetes.io/name: web
  ports:
  - port: 8080
    targetPort: 8080
