envs/dev/web/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: bitcert-attest
spec:
  ingressClassName: kong
  rules:
  - host: web-g53.dev.bitcert.test
    http:
      paths:
      - path: /web/v1
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 8080
